# skopos

./: .gitignore  Cargo.toml  README.md  install.sh  package.json
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: TitleBar.tsx
crates/skopos-agent/: Cargo.toml
crates/skopos-agent/src/: main.rs
crates/skopos-cli/: Cargo.toml
crates/skopos-cli/assets/: skopos-ascii.txt
crates/skopos-cli/examples/: render_ascii_png.rs
crates/skopos-cli/src/: agent.rs  cli.rs  codex_limits.rs  config.rs  format.rs  icons.rs  install.rs  limits.rs  local_usage.rs  main.rs  providers.rs  repl.rs  report.rs  splash.rs  statusline.rs  theme.rs  update.rs  work.rs
crates/skopos-cli/src/network/: health.rs  install.rs  mod.rs  probe.rs  tui.rs  watch.rs
crates/skopos-cli/src/term_style/: apply.rs  mod.rs  profile.rs  tui.rs
crates/skopos-collectors/: Cargo.toml
crates/skopos-collectors/src/: claude_code.rs  codex.rs  gemini.rs  hermes.rs  lib.rs
crates/skopos-core/: Cargo.toml
crates/skopos-core/src/: lib.rs
crates/skopos-pricing/: Cargo.toml
crates/skopos-pricing/src/: lib.rs
crates/skopos-store/: Cargo.toml
crates/skopos-store/migrations/: 001_initial.sql
crates/skopos-store/src/: lib.rs  network.rs  usage.rs
docs/: architecture.md
migrations/: 002_network.sql
packaging/: skopos.desktop
