[workspace]
members = [
  "crates/skopos-core",
  "crates/skopos-store",
  "crates/skopos-pricing",
  "crates/skopos-collectors",
  "crates/skopos-agent",
  "crates/skopos-cli",
  "apps/desktop/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Kevin Coss <devstuff@bydaffi.com>"]
repository = "https://github.com/Sadboy-s-Development-Group/skopos"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "uuid", "json"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = "0.28"
toml = "0.8"
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }

skopos-core = { path = "crates/skopos-core", version = "0.2.0-beta.1" }
skopos-store = { path = "crates/skopos-store", version = "0.2.0-beta.1" }
skopos-pricing = { path = "crates/skopos-pricing", version = "0.2.0-beta.1" }
skopos-collectors = { path = "crates/skopos-collectors", version = "0.2.0-beta.1" }
