[package]
name = "skopos-agent"
version = "0.2.0-beta.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
skopos-core.workspace = true
skopos-store.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
