[package]
name = "skopos-agent"
version = "0.2.0-beta.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Background agent daemon for the Skopos workspace."

[dependencies]
anyhow.workspace = true
clap.workspace = true
skopos-core.workspace = true
skopos-store.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
