[package]
name = "skopos-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "skopos"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
serde.workspace = true
serde_json.workspace = true
skopos-collectors.workspace = true
skopos-core.workspace = true
skopos-pricing.workspace = true
skopos-store.workspace = true
tokio.workspace = true
toml.workspace = true
