[package]
name = "skopos-cli"
version = "0.2.0-beta.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "skopos"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
self_update = { version = "0.44", default-features = false, features = ["archive-tar", "compression-flate2", "reqwest", "rustls"] }
serde.workspace = true
serde_json.workspace = true
skopos-collectors.workspace = true
skopos-core.workspace = true
skopos-pricing.workspace = true
skopos-store.workspace = true
tokio.workspace = true
toml.workspace = true
