[package]
name = "skopos-cli"
version = "0.2.0-beta.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Skopos — the unified workspace for developers: project launchpad, AI usage tracking across providers, and a local network monitor."
keywords = ["cli", "tui", "ai", "claude", "observability"]
categories = ["command-line-utilities"]
readme = "../../README.md"

[[bin]]
name = "skopos"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
crossterm.workspace = true
self_update = { version = "0.44", default-features = false, features = ["archive-tar", "compression-flate2", "reqwest", "rustls"] }
serde.workspace = true
serde_json.workspace = true
skopos-collectors.workspace = true
skopos-core.workspace = true
skopos-pricing.workspace = true
skopos-store.workspace = true
tokio.workspace = true
toml.workspace = true

[dev-dependencies]
# Only used by the `render_ascii_png` example, not by the `skopos` binary.
ab_glyph = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = { version = "0.25", default-features = false }
