[package]
name = "skopos-collectors"
version = "0.2.0-beta.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
skopos-core.workspace = true
