[package]
name = "skopos-collectors"
version = "0.2.0-beta.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Provider-specific collectors that ingest AI usage events for Skopos (Claude Code, Codex, Gemini, Hermes)."

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chrono.workspace = true
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json.workspace = true
skopos-core.workspace = true
