[package]
name = "skopos-core"
version = "0.2.0-beta.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core domain types shared across the Skopos workspace."

[dependencies]
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
