[package]
name = "skopos-pricing"
version = "0.2.0-beta.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Pricing catalog for the AI providers Skopos tracks (Anthropic, OpenAI, Google, Hermes)."

[dependencies]
anyhow.workspace = true
serde.workspace = true
skopos-core.workspace = true
toml.workspace = true
