[package]
name = "skopos-store"
version = "0.2.0-beta.1"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
skopos-core.workspace = true
tokio.workspace = true
