[package]
name = "skopos-store"
version = "0.2.0-beta.4"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "SQLite storage layer for Skopos usage and network telemetry."

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde_json.workspace = true
sqlx.workspace = true
skopos-core.workspace = true
tokio.workspace = true
