[package]
name = "skopos-desktop"
version = "0.2.0-beta.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Skopos desktop UI (Tauri v2)."
publish = false

# Tauri's mobile entry point requires the app logic to live in a lib so the
# same `run()` can be invoked from both the desktop binary and mobile targets.
[lib]
name = "skopos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
